--- a/public/index_n.html
+++ b/public/index_n.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
@@ -54,4 +54,4 @@
 
     <div id="chat-log"></div>
   </body>
-</html>
+</html> -->
